One "int" was left where a qlonglong is needed

BUG: 276920